try to fix songlist on mobile

--- a/_sass/_musig.scss
+++ b/_sass/_musig.scss
@@ -59,6 +59,11 @@ article.song {
                     text-decoration: none;
                 }
             }
+            @include media-query($on-palm) {
+                max-width: 100%;
+                font-size: 4vw;
+
+            }
         }
     }
 }
